kubernetes/apps/monitoring/grafana/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: cilium
  rules:
  - host: "grafana.${DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "grafana.${DOMAIN}"
